# myKrpc

./: CMakeLists.txt  README.md
example/: user.proto
example/Callee/: CMakeLists.txt  userservice.cc
example/Caller/: CMakeLists.txt  calluserservice.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchanel.cc  mprpcconfig.cc  rpcprovider.cc
src/include/: mprpcapplication.h  mprpcconfig.h  rpcprovider.h
test/protest/: CMakeLists.txt  person  person.pb.cc  person.pb.h
test/protobuf/: a.out  main.cc  test.pb.h  test.proto
